Added products - Electronics

--- a/frontend/src/app/components/home/filters/filters.component.html
+++ b/frontend/src/app/components/home/filters/filters.component.html
@@ -34,7 +34,7 @@
     <mdb-card-body>
        <!--Title-->
        <mdb-card-title>
-          <h4>Choose a Department</h4>
+          <h4>Choose a Brand</h4>
        </mdb-card-title>
        
        <!--Text-->
