--- a/frontend/src/app/components/layout/app-header/app-header.component.html
+++ b/frontend/src/app/components/layout/app-header/app-header.component.html
@@ -3,7 +3,7 @@
 
     <!-- Brand -->
     <a class="navbar-brand waves-effect" [routerLink]="['/']">
-      <img src="../../../../assets/tshirtshop.png" height="30" alt="">
+      <img src="../../../../assets/images/deco_01.gif" height="30" alt="">
     </a>
 
     <!-- Collapse -->
