--- a/frontend/src/app/components/layout/app-header/small-cart/small-cart.component.html
+++ b/frontend/src/app/components/layout/app-header/small-cart/small-cart.component.html
@@ -18,7 +18,7 @@
           </th>
           <td class="border-0 align-middle">
                 <var class="price">${{(product.Price * product.Quantity).toFixed(2)}}</var> 
-                <small class="text-muted">(${{product.Price.toFixed(2)}} each)</small> 
+                <small class="text-muted"></small> 
           </td>
           <td class="border-0 align-middle"><strong>{{product.Quantity}}</strong></td>
           <td class="border-0 align-middle"><a (click)="onRemoveProductsFromCart(product.ProductId)" class="text-dark"><i class="fa fa-trash"></i></a></td>
