--- a/frontend/src/app/components/account/account.component.html
+++ b/frontend/src/app/components/account/account.component.html
@@ -14,6 +14,9 @@
                 <li class="list-group-item hoverable">
                     <a href="#">Your Cart</a>
                 </li>
+                <li class="list-group-item hoverable">
+                    <a [routerLink]="['/checkout/payment-information']">Your Bills</a>
+                </li>
             </ul>
         </div>
         <div class="col-sm-8">
