--- a/frontend/src/app/components/home/product-list/product-list.component.html
+++ b/frontend/src/app/components/home/product-list/product-list.component.html
@@ -2,9 +2,7 @@
 <section class="text-center pb-3 mb-5 mt-1">
     <!--Section description-->
     <p class="grey-text pb-1 font-weight-normal font-italic">
-        We hope you have fun developing TShirtShop, the e-commerce store from begining PHP and MySQL E-commerce: from Novoice to Professional!
-        We have the largest collection of t-shirt with postal stamps on Earth! Browse our departments and categories to find your favorite!
- 
+      I shouldn't have plugged my iPhone into the PC at the kitchen. It's now in the sync. -- Shenzy
     </p>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
