--- a/frontend/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/components/shopping-cart/shopping-cart.component.html
@@ -22,7 +22,7 @@
                             <!-- PRODUCT -->
                             <div class="row" *ngFor="let product of cart">
                                 <div class="col-12 col-sm-12 col-md-2 text-center">
-                                        <img class="img-responsive" [src]="'/assets/product_images/' + product.Thumbnail"  alt="product.Name"  height="80">
+                                        <img class="img-responsive" [src]="'/assets/productImages/' + product.Thumbnail"  alt="product.Name"  height="80">
                                 </div>
                                 <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-5">
                                     <h4 class="product-name"><strong>{{product.Name}}</strong></h4>
