--- a/frontend/src/app/components/checkout/review/review.component.html
+++ b/frontend/src/app/components/checkout/review/review.component.html
@@ -2,7 +2,7 @@
     <ul class="list-group mb-3">
         <li class="list-group-item d-flex lh-condensed" *ngFor="let product of checkoutProducts">
             <div>
-                <img [src]="'/assets/product_images/' + product.Thumbnail" [alt]="product.Name" height="100">
+                <img [src]="'/assets/productImages/' + product.Thumbnail" [alt]="product.Name" height="100">
             </div>
             <div style="padding: 10px" class="pl-5">
                 <h6 class=" my-0"><strong>{{product.Name}}</strong></h6>
