--- a/frontend/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/components/shopping-cart/shopping-cart.component.html
@@ -27,11 +27,11 @@
                                 <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-5">
                                     <h4 class="product-name"><strong>{{product.Name}}</strong></h4>
                                     <dl class="param param-inline small">
-                                        <dt>Size: </dt>
-                                        <dd><span class="badge purple mr-1">{{product.DepartmentName}}</span></dd>
+                                        <!-- <dt>Size: </dt> -->
+                                        <dd><span class="badge purple mr-1">{{product.BrandName}}</span></dd>
                                       </dl>
                                       <dl class="param param-inline small">
-                                        <dt>Color: </dt>
+                                        <!-- <dt>Color: </dt> -->
                                         <dd> <span class="badge blue mr-1">{{product.CategoryName}}</span></dd>
                                       </dl>
                                 </div>
