--- a/frontend/src/app/components/account/account.component.html
+++ b/frontend/src/app/components/account/account.component.html
@@ -6,18 +6,22 @@
         <div class="col-sm-4">
             <ul class="list-group">
                 <li class="list-group-item hoverable">
-                    <a href="#">Your Profile</a>
+                    <a href="#">Homepage</a>
                 </li>
                 <li class="list-group-item hoverable">
-                    <a href="#">Your Wishlist</a>
+                        <a href="/customer/my-account">Your Profile</a>
+                    </li>
+                <li class="list-group-item hoverable">
+                    <a [routerLink]="['/cart/shopping-cart']">Your Cart</a>
                 </li>
                 <li class="list-group-item hoverable">
-                    <a href="#">Your Cart</a>
-                </li>
-                <li class="list-group-item hoverable">
-                    <a [routerLink]="['/checkout/payment-information']">Your Bills</a>
+                    <a [routerLink]="['my-bills']">Your Bills</a>
                 </li>
             </ul>
+            <div class="mt-3">
+                    <a class="btn btn-success " [routerLink]="['/customer/edit-account']"
+                        >Edit Info?</a>
+                </div>
         </div>
         <div class="col-sm-8">
             <form>
@@ -26,7 +30,7 @@
                         style="width: 35%; height: 35%;">
                     <div class="col-md-8 mt-3">
                         <label for="userName">Name</label>
-                        <p style="font-size: 15px;">{{loggedUser.FullName}}</p>
+                        <p style="font-size: 15px;">{{loggedUser.FirstName}} {{loggedUser.LastName}}</p>
                     </div>
                     <div class="col-md-8 mb-3">
                         <label for="emailId">Email</label>
@@ -34,7 +38,7 @@
                     </div>
                     <div class="col-md-8 mb-3">
                         <label for="emailId">Mobile</label>
-                        <p style="font-size: 15px;">{{loggedUser.Mobile}}</p>
+                        <p style="font-size: 15px;">+1 {{loggedUser.Mobile}}</p>
                     </div>
                     <div class="col-md-8 mb-3">
                         <label for="emailId">Country</label>
