--- a/frontend/src/app/components/checkout/payment-info/payment-info.component.html
+++ b/frontend/src/app/components/checkout/payment-info/payment-info.component.html
@@ -46,7 +46,8 @@
                                 <div class="pr-4 pl-4-0">
                                     <ul class="list-unstyled mb-4">
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Order Subtotal
-                                            </strong><strong>${{totalPrice.toFixed(2)}}</strong></li>
+                                            </strong><strong>${{nonTaxedPrice.toFixed(2)}}</strong></li>
+                                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Tax</strong><strong>${{nonTaxedPrice*tax}}</strong></li>
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Shipping and
                                                 handling</strong><strong>$0.00</strong></li>
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong>
