--- a/frontend/src/app/components/layout/app-header/app-header.component.html
+++ b/frontend/src/app/components/layout/app-header/app-header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <!-- Brand -->
-    <a class="navbar-brand waves-effect" [routerLink]="['/']">
+    <a class="navbar-brand waves-effect" href="#">
       <img src="../../../../assets/images/deco_01.gif" height="30" alt="">
     </a>
 
@@ -56,8 +56,7 @@
             </a>
           </li>
         </ng-template>
-
-
+        <li *ngIf="example" class="nav-link">{{displayTemp(example.main.temp)}} °C </li>
       </ul>
 
       <!-- Right -->
@@ -70,6 +69,9 @@
             <span class="clearfix d-none d-sm-inline-block"> Cart </span>
           </a>
           <app-small-cart class="dropdown-menu dropdown-cart mr-5 pb-0" *ngIf="itemCount != 0"></app-small-cart>
+          <li>
+              <a class="nav-link stores">Stores</a>
+          </li>
       </ul>
     </div>
 
