--- a/frontend/src/app/components/layout/app-header/small-cart/small-cart.component.html
+++ b/frontend/src/app/components/layout/app-header/small-cart/small-cart.component.html
@@ -10,7 +10,7 @@
                     <a href="#" class="text-dark d-inline-block align-middle">{{product.Name}}</a>
                 </h5>
                 <span class="text-muted font-weight-normal font-italic d-block ml-2">
-                        <span class="badge purple mr-1">{{product.DepartmentName}}</span>
+                        <span class="badge purple mr-1">{{product.BrandName}}</span>
                         <span class="badge blue mr-1">{{product.CategoryName}}</span>
                 </span>
               </div>
