--- a/frontend/src/app/components/checkout/payment-final/payment-final.component.html
+++ b/frontend/src/app/components/checkout/payment-final/payment-final.component.html
@@ -65,7 +65,7 @@
         </form>
     </div>
     <div class="float-center">
-            <a class="btn btn-success " (click)=onSelectPayment() [routerLink]="['/order/order-confirmation']"
+            <a class="btn btn-success " (click)=onPayment() [routerLink]="['/order/order-confirmation']"
                 >Pay</a>
         </div>
 </div>  
