--- a/frontend/src/app/components/order-confirmation/order-confirmation.component.html
+++ b/frontend/src/app/components/order-confirmation/order-confirmation.component.html
@@ -1,7 +1,6 @@
 <div class="jumbotron text-xs-center">
     <h1 class="display-3">Thank You!</h1>
-    <p class="lead">Your Payment has been recived to us. <strong>Please check your email</strong> </p>
-    <p id="" [(ngModel)]="customerInfor.FullName"  name="firstName"></p>
+    <p class="lead">Your Payment has been recived to us. <strong>Please check your email {{customerInfor.FirstName}}.</strong> </p>
     <hr>
     <p>
         Having trouble? <a href="">Contact us</a>
