--- a/frontend/src/app/components/checkout/payment-info/payment-info.component.html
+++ b/frontend/src/app/components/checkout/payment-info/payment-info.component.html
@@ -55,7 +55,7 @@
                                         </li>
                                     </ul>
                                     <div class="float-right">
-                                        <a class="btn btn-success " [routerLink]="['/checkout/payment-final']"
+                                        <a class="btn btn-success " (click)="onCheckout()" [routerLink]="['/checkout/payment-final']"
                                             >Check out</a>
                                     </div>
                                     <!-- <app-paypal-checkout [comments]="remark" [totalAmount]="totalPrice.toFixed(2)" class="w-100"></app-paypal-checkout>
