Register + Login Bug removed

--- a/frontend/src/app/components/account/account.component.html
+++ b/frontend/src/app/components/account/account.component.html
@@ -15,7 +15,7 @@
                     <a [routerLink]="['/cart/shopping-cart']">Your Cart</a>
                 </li>
                 <li class="list-group-item hoverable">
-                    <a [routerLink]="['my-bills']">Your Bills</a>
+                    <a [routerLink]="['my-bills']">Your Orders</a>
                 </li>
             </ul>
             <div class="mt-3">
