--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -38,7 +38,7 @@
                             [ngClass]="{ 'is-invalid': submitted && f.Town.errors }" >
 
                              <div *ngIf="submitted && f.Town.errors" class="invalid-feedback">
-                                <div *ngIf="f.Town.errors.required">First Name is required</div>
+                                <div *ngIf="f.Town.errors.required">Town Name is required</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -86,7 +86,7 @@
                             [ngClass]="{ 'is-invalid': submitted && f.LastName.errors }" >
 
                             <div *ngIf="submitted && f.LastName.errors" class="invalid-feedback">
-                                    <div *ngIf="f.LastName.errors.required">First Name is required</div>
+                                    <div *ngIf="f.LastName.errors.required">Last Name is required</div>
                                 </div>
                         </div>
                         <div class="form-group">
