Added new Flows

--- a/frontend/src/app/components/account/account.component.html
+++ b/frontend/src/app/components/account/account.component.html
@@ -15,7 +15,10 @@
                     <a [routerLink]="['/cart/shopping-cart']">Your Cart</a>
                 </li>
                 <li class="list-group-item hoverable">
-                    <a [routerLink]="['my-bills']">Your Orders</a>
+                    <a [routerLink]="['my-orders']">Your Orders</a>
+                </li>
+                <li class="list-group-item hoverable">
+                    <a [routerLink]="['my-cards']">Your Cards</a>
                 </li>
             </ul>
             <div class="mt-3">
