--- a/frontend/src/app/components/account/bill/bill.component.html
+++ b/frontend/src/app/components/account/bill/bill.component.html
@@ -1,6 +1,6 @@
 <div>
     <div >
-        <h2>My Orders - {{user.FirstName}} {{user.LastName}}</h2>
+        <h2>My Orders - {{user.FirstName}} {{user.LastName}} <a [routerLink]="['/']" class="btn btn-outline-info btn-md float-right">Continue shopping</a></h2>
     </div>
     <div>
         <table class="table table-striped">
