Added Product Details for Order Page

--- a/frontend/src/app/components/account/account.component.html
+++ b/frontend/src/app/components/account/account.component.html
@@ -22,7 +22,7 @@
                 </li>
             </ul>
             <div class="mt-3">
-                    <a class="btn btn-success " [routerLink]="['/customer/edit-account']"
+                    <a class="btn btn-success " [routerLink]="['/customer/edit-info']"
                         >Edit Info?</a>
                 </div>
         </div>
@@ -32,19 +32,23 @@
                     <img src="https://angular-shoppingcart.firebaseapp.com/assets/img/malecostume-512.png" [alt]="loggedUser.FullName"
                         style="width: 35%; height: 35%;">
                     <div class="col-md-8 mt-3">
-                        <label for="userName">Name</label>
+                        <label class="font-weight-bold" for="userName">Name</label>
                         <p style="font-size: 15px;">{{loggedUser.FirstName}} {{loggedUser.LastName}}</p>
                     </div>
                     <div class="col-md-8 mb-3">
-                        <label for="emailId">Email</label>
+                            <label class="font-weight-bold" for="Address">Address</label>
+                            <p style="font-size: 15px;">{{loggedUser.AddressOne}} {{AddressTwo}}, {{loggedUser.Town}}, {{loggedUser.ZipCode}}, {{loggedUser.Country}}</p>
+                        </div>
+                    <div class="col-md-8 mb-3">
+                        <label class="font-weight-bold" for="emailId">Email</label>
                         <p style="font-size: 15px;">{{loggedUser.Email}}</p>
                     </div>
                     <div class="col-md-8 mb-3">
-                        <label for="emailId">Mobile</label>
+                        <label class="font-weight-bold" for="Mobile">Mobile</label>
                         <p style="font-size: 15px;">+1 {{loggedUser.Mobile}}</p>
                     </div>
                     <div class="col-md-8 mb-3">
-                        <label for="emailId">Country</label>
+                        <label class="font-weight-bold" for="country">Country</label>
                         <p style="font-size: 15px;">{{loggedUser.Country}}</p>
                     </div>
                 </div>
