--- a/frontend/src/app/components/account/bill/bill.component.html
+++ b/frontend/src/app/components/account/bill/bill.component.html
@@ -3,23 +3,28 @@
         <h2>My Orders - {{user.FirstName}} {{user.LastName}} <a [routerLink]="['/']" class="btn btn-outline-info btn-md float-right">Continue shopping</a></h2>
     </div>
     <div>
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
                 <th>Order ID</th>
                 <th> Total Amount</th>
                 <th>Date Ordered</th>
                 <th>Purchased At</th>
+                <!--<th></th>-->
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let b of bill">
-                <td><a [routerLink]="['/customer/my-account/order-details']">{{b.OrderId}}</a></td>
+                <td><a [routerLink]="['/customer/my-account/order-details/',b.OrderId]"># {{b.OrderId}}</a></td>
                 <td>{{b.TotalAmount}} $</td>
                 <td>{{b.DateString}}</td>
                 <td>{{b.StoreName}}</td>
+               <!-- <td><a class='btn btn-primary stretched-link' [routerLink]="['/customer/my-account/order-details/',b.OrderId]">Go to Order?</a></td>-->
             </tr>
         </tbody>
         </table>
+    </div>
+    <div>
+        <a class='btn btn-primary'>Repeat an Order?</a>
     </div>
 </div>
