--- a/frontend/src/app/components/account/orderdetail/orderdetail.component.html
+++ b/frontend/src/app/components/account/orderdetail/orderdetail.component.html
@@ -24,6 +24,10 @@
         </tbody>
         </table>
         <div>
+            <p class="lead">Products in Transit</p>
+        </div>
+        <div>
+            <p>View Your Tracking Information : Tracking Number :: #9865342 </p>
         </div>
     </div>
 </div>
