--- a/frontend/src/app/components/checkout/customer-info/customer-info.component.html
+++ b/frontend/src/app/components/checkout/customer-info/customer-info.component.html
@@ -33,17 +33,17 @@
                 <div class="col-md-5 mb-3">
                     <label for="country">Country</label>
                     <input type="text" class="form-control" id="" placeholder="Country"
-                        [(ngModel)]="customerInfor.Country" name="address2" readonly>
+                        [(ngModel)]="customerInfor.Country" name="country" readonly>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <label for="state">State</label>
+                    <label for="state">City</label>
                     <input type="text" class="form-control" id="" placeholder="City or Town"
-                        [(ngModel)]="customerInfor.Town" name="address2" readonly>
+                        [(ngModel)]="customerInfor.Town" name="state" readonly>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="zip">Zip</label>
                     <input type="text" class="form-control" id="" placeholder="ZipCode"
-                        [(ngModel)]="customerInfor.ZipCode" name="address2" readonly>
+                        [(ngModel)]="customerInfor.ZipCode" name="zip" readonly>
                 </div>
             </div>
             <hr class="mb-4">
