--- a/frontend/src/app/components/checkout/payment-info/payment-info.component.html
+++ b/frontend/src/app/components/checkout/payment-info/payment-info.component.html
@@ -47,7 +47,7 @@
                                     <ul class="list-unstyled mb-4">
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Order Subtotal
                                             </strong><strong>${{nonTaxedPrice.toFixed(2)}}</strong></li>
-                                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Tax</strong><strong>${{nonTaxedPrice*tax}}</strong></li>
+                                            <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Tax</strong><strong>${{(nonTaxedPrice*tax).toFixed(2)}}</strong></li>
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Shipping and
                                                 handling</strong><strong>$0.00</strong></li>
                                         <li class="d-flex justify-content-between py-3 border-bottom"><strong class="text-muted">Total</strong>
@@ -58,8 +58,6 @@
                                         <a class="btn btn-success " (click)="onCheckout()" [routerLink]="['/checkout/payment-final']"
                                             >Check out</a>
                                     </div>
-                                    <!-- <app-paypal-checkout [comments]="remark" [totalAmount]="totalPrice.toFixed(2)" class="w-100"></app-paypal-checkout>
-                                    <a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Procceed to checkout</a>-->
                                 </div> 
                             </div>
                         </div>
