--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -55,7 +55,7 @@
               </tr>
             </tbody>
           </table>
-
+          <a class="btn btn-primary">Buy on Contract?</a>
         </div>
       </div>
     </div>
