--- a/frontend/src/app/components/admin/inventory/inventory.component.html
+++ b/frontend/src/app/components/admin/inventory/inventory.component.html
@@ -3,19 +3,21 @@
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
-                <th>Store ID</th>
-                <th> Store Name</th>
-                <th>Store Address</th>
-                <th>Store City</th>
+                <th>Store Name</th>
+                <th>Product Name</th>
+                <th>Category</th>
+                <th>Current Quantity</th>
+                <th>Reorder</th>
                 <!--<th></th>-->
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let s of stores">
-                <td><a [routerLink]="['/admin/stores/',s.StoreId]">{{s.StoreId}}</a></td>
-                <td>{{s.StoreName}}</td>
-                <td>{{s.StoreAddress}}</td>
-                <td>{{s.StoreCity}}</td>
+            <tr *ngFor="let i of inventory">
+                <td>{{i.StoreName}}</td>
+                <td>{{i.BrandName}} {{i.ProductName}}</td>
+                <td>{{i.CategoryName}}</td>
+                <td>{{i.CurrentQuantity}}</td>
+                <td><a [routerLink]="['/admin/reorder']" class='btn btn-primary'>ReOrder?</a></td>
                <!-- <td><a class='btn btn-primary stretched-link' [routerLink]="['/customer/my-account/order-details/',b.OrderId]">Go to Order?</a></td>-->
             </tr>
         </tbody>
